<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:id="@+id/action_bar"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@android:color/black"
        android:elevation="4dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/fui_transparent"
            app:srcCompat="@drawable/arrow_back" />

        <TextView
            android:id="@+id/header_textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="16"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/settings"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="24sp" />

        <View
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        android:paddingLeft="12dp"
        android:paddingTop="4dp"
        android:paddingRight="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/action_bar">

        <Switch
            android:id="@+id/email_alerts_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/email_alerts"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <Switch
            android:id="@+id/mobile_alerts_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:text="@string/mobile_alerts"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/class_roster"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/transparent"
            android:text="@string/class_roster"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/design_default_color_primary_dark"
            android:textSize="16sp" />

        <Button
            android:id="@+id/cornell_academic_calendar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="16dp"
            android:background="@color/transparent"
            android:text="@string/cornell_academic_calendar"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/design_default_color_primary_dark"
            android:textSize="16sp" />

        <Button
            android:id="@+id/sign_out"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/track_button_background"
            android:text="@string/sign_out" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>